# colosseum_sdk

./: .gitignore  pyproject.toml
examples/: dajeromadaje.py
src/colosseum_sdk/: __init__.py  simulation.py  state.py  utils.py
src/colosseum_sdk/config/: robot.py  scene.py
src/colosseum_sdk/control/: controller.py
src/colosseum_sdk/inference/: base.py  onnx.py
src/colosseum_sdk/robots/: __init__.py
src/colosseum_sdk/robots/t1/: __init__.py  t1.xml  t1_config.py
src/colosseum_sdk/robots/t1/models/: locomotion.onnx  locomotion.onnx.data  t1-velocity-symmetric_ppo_v10.onnx.data
src/colosseum_sdk/skills/: __init__.py  arm.py  base.py
src/colosseum_sdk/skills/locomotion/: __init__.py  gait_phase.py  locomotion.py  velocity_command.py
tests/: t1_robot_registration.py
